# Phishor

./: README.md  run.bat
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/: Account.tsx  Footer.tsx  MHistDraggable.tsx  MHistForm.tsx  Nav.tsx  ProtectedRoute.tsx
client/src/context/: AuthContext.tsx
client/src/css/: about.css  home.css  index.css  login.css  main.css
client/src/pages/: AboutPage.tsx  HomePage.tsx  LoginPage.tsx  MainPage.tsx  RegisterPage.tsx
server/: Cargo.toml
server/src/: main.rs  routes.rs
server/src/handlers/: analysis.rs  auth.rs  mod.rs
server/src/middleware/: auth_middleware.rs  mod.rs  rate_limiter.rs  rate_limiter_middleware.rs  security.rs
server/src/utils/: gemini.rs  jwt.rs  mod.rs  rate_limiter.rs
