[package]
name = "actix-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
