[package]
name = "actix-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-service = "2.0.3"
actix-web = "4.10.2"
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
